--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(Flyception)
 export(align_cameras)
 export(analyze_trajectories)
+export(dF_F0_image)
 export(detect_flash)
 export(detect_interaction)
 export(detect_window)
 export(find_goodframes)
+export(measureROI)
+export(plot_dF_F0)
 export(register_images)
 export(sync_frames)
