--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: FlyceptionR
+Package: Flyception2R
 Type: Package
-Title: R scripts and utilities for Flyception data analysis
+Title: R scripts and utilities for Flyception2 data analysis
 Version: 0.1.0
 Authors@R: person("Takeo", "Katsuki", email = "takeo.katsuki@gmail.com", role = c("aut", "cre"))
 Maintainer: Takeo Katsuki <takeo.katsuki@gmail.com>
-Description: FlyceptionR provides functions useful for analyzing data collected
-    with Flyception.
+Description: Flyception2R provides functions useful for analyzing data collected
+    with Flyception2.
 Depends:
     R (>= 3.3.1),
     EBImage,
@@ -25,4 +25,4 @@ Remotes: github::tkatsuki/dipr,
 License: BSD 3
 Encoding: UTF-8
 LazyData: TRUE
-RoxygenNote: 5.0.1.9000
+RoxygenNote: 6.0.1
