--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Flyception2R)
 export(align_cameras)
 export(analyze_trajectories)
 export(dF_F0_image)
+export(detect_angle)
 export(detect_flash)
 export(detect_interaction)
 export(detect_window)
@@ -13,4 +14,3 @@ export(measureROI)
 export(plot_dF_F0)
 export(register_images)
 export(sync_frames)
-
